0032920: Coding - fix checking of std::stringstream buffer size on VS2019/C++20

Use tellp() instead of in_avail() for testing non-empty std::stringstream state.